--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 </head>
 <body>
   <form>
-    <label for="choix">Choisissez une option :</label>
+    <label for="choix">Choisissez le premier personnage :</label>
     <select id="choix" name="choix">
       <!-- Ajoutez autant d'options que nécessaire -->
+    </select>
+    <label for="choix2">choississez le deuxième personnage :</label>
+    <select id="choix2" name="choix">
+        <!-- Ajoutez autant d'options que nécessaire -->
     </select>
     <input type="submit" value="Valider" id="button1">
   </form>
