--- a/index.html
+++ b/index.html
@@ -6,28 +6,6 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <!--Rajout inscription, connexion-->
-    <div class="header">
-      <button id="loginBtn">Connexion</button>
-      <button id="registerBtn">Inscription</button>
-    </div>
-  
-    <form id="registerForm" class="hidden">
-      <h2>S'inscrire</h2>
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="password" name="password" placeholder="Password" required>
-      <button type="submit">Inscription</button>
-    </form>
-  
-    <form id="loginForm" class="hidden">
-      <h2>Se connecter</h2>
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="password" name="password" placeholder="Password" required>
-      <button type="submit">Connexion</button>
-    </form>
-    <!--fin du rajout-->
-
-
   <form>
     <label for="choix">Choisissez le premier personnage :</label>
     <select id="choix" name="choix">
@@ -52,7 +30,7 @@
     <p id="force2"></p>
   </div>
   </div>
-
+<a href="inscription_connexion.html">test</a>
 </body>
 <script src='main.js'></script>
 <script>
