--- a/inscription_connexion.html
+++ b/inscription_connexion.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="connexion.css">
 </head>
 <body>
-    
     <div class="container">
         <div class="overlay-container">
             <div class="overlay">
@@ -38,6 +37,7 @@
                 <input type="password" name="password" placeholder="Mot de passe" required>
                 <button type="submit">Se connecter</button>
             </form>
+            <a href="index.html"><button style="text-align: left;">Retourner au menu</button></a>
         </div>
     </div>
       <script src="connexion.js"></script>
