toute-les-stats

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       <p id="vitesse1"></p>
       <h3 id="spécific2">Défense</h3>
       <p id="defense1"></p>
+      <h3 id="spécific2">Durabilité</h3>
+      <p id="durabilite1"></p>
+      <h3 id="spécific2">Intelligence</h3>
+      <p id="intelligence1"></p>
     </div>
   
     <div id="carte2">
@@ -49,6 +53,10 @@
       <p id="vitesse2"></p>
       <h3 id="spécific2">Défense</h3>
       <p id="defense2"></p>
+      <h3 id="spécific2">Durabilité</h3>
+      <p id="durabilite2"></p>
+      <h3 id="spécific2">Intelligence</h3>
+      <p id="intelligence2"></p>
     </div>
   </div>
 </body>
