--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </form>
   
 
-    <div id="carte1">
+    <div id="carte1" class="hidden">
       <h2 id="name1"></h2>
       <h3 id="spécific1">Force</h3>
       <p id="force1"></p>
@@ -45,7 +45,7 @@
       <p id="intelligence1"></p>
     </div>
   
-    <div id="carte2">
+    <div id="carte2" class="hidden">
       <h2 id="name2"></h2>
       <h3 id="spécific2">Force</h3>
       <p id="force2"></p>
