design-inscription-connexion

--- a/inscription_connexion.html
+++ b/inscription_connexion.html
@@ -10,14 +10,16 @@
     <div class="container">
         <div class="overlay-container">
             <div class="overlay">
-                <div class="overlay-panel overlay-left">
+                <div id="panneaubienvenue" class="hidden" class="overlay-panel overlay-left">
                     <h1>Bienvenue !</h1>
                     <p>Pour rester connecté avec nous, veuillez vous connecter avec vos informations personnelles</p>
+                    <br>
                     <button id="loginBtn">Se connecter</button>
                 </div>
-                <div class="overlay-panel overlay-right">
+                <div id="panneaurevue" class="hidden" class="overlay-panel overlay-right">
                     <h1>Heureux de vous revoir !</h1>
                     <p>Entrez vos informations personnelles pour vous connecter à votre compte</p>
+                    <br>
                     <button id="registerBtn">S'inscrire</button>
                 </div>
             </div>
@@ -37,8 +39,9 @@
                 <input type="password" name="password" placeholder="Mot de passe" required>
                 <button type="submit">Se connecter</button>
             </form>
-            <a href="index.html"><button style="text-align: left;">Retourner au menu</button></a>
         </div>
+        <br>
+            <a href="index.html"><button>Retourner au menu</button></a>
     </div>
       <script src="connexion.js"></script>
 </body>
