--- a/index.html
+++ b/index.html
@@ -13,50 +13,53 @@
 </header>
 <body>
   <div>
-    <form>
-      <label for="choix">Choisissez le premier personnage: </label>
-      <select id="choix" name="choix">
-        <!-- Ajoutez autant d'options que nécessaire -->
-      </select>
-      <label for="choixA1">Choisissez un accessoire: </label>
-      <select id="choixA1" name="choixA">
+    <div style="text-align: center;">
+      <form>
+        <label for="choix">Choisissez le premier personnage: </label>
+        <select id="choix" name="choix">
+          <!-- Ajoutez autant d'options que nécessaire -->
+        </select>
+        <label for="choixA1">Choisissez un accessoire: </label>
+        <select id="choixA1" name="choixA" style="margin-right: 10%;"></select>
 
-      </select>
-      <br>
-      <label for="choix2">Choississez le deuxième personnage: </label>
-      <select id="choix2" name="choix">
-        <!-- Ajoutez autant d'options que nécessaire -->
-      </select>
-      <input type="submit" value="Valider" id="button1">
-    </form>
-  
-
-    <div id="carte1" class="hidden">
-      <h2 id="name1"></h2>
-      <h3 id="spécific1">Force</h3>
-      <p id="force1"></p>
-      <h3 id="spécific2">Vitesse</h3>
-      <p id="vitesse1"></p>
-      <h3 id="spécific2">Défense</h3>
-      <p id="defense1"></p>
-      <h3 id="spécific2">Durabilité</h3>
-      <p id="durabilite1"></p>
-      <h3 id="spécific2">Intelligence</h3>
-      <p id="intelligence1"></p>
+        <label for="choix2">Choississez le deuxième personnage: </label>
+        <select id="choix2" name="choix">
+          <!-- Ajoutez autant d'options que nécessaire -->
+        </select>
+        <label for="choixA1">Choisissez un accessoire: </label>
+        <select id="choixA1" name="choixA"></select>
+        <input type="submit" value="Valider" id="button1">
+      </form>
     </div>
-  
-    <div id="carte2" class="hidden">
-      <h2 id="name2"></h2>
-      <h3 id="spécific2">Force</h3>
-      <p id="force2"></p>
-      <h3 id="spécific2">Vitesse</h3>
-      <p id="vitesse2"></p>
-      <h3 id="spécific2">Défense</h3>
-      <p id="defense2"></p>
-      <h3 id="spécific2">Durabilité</h3>
-      <p id="durabilite2"></p>
-      <h3 id="spécific2">Intelligence</h3>
-      <p id="intelligence2"></p>
+
+    <div style="text-align: center; width: 50%; margin-left: 25%;">
+      <div id="carte1" class="hidden" style="text-align: left;">
+        <h2 id="name1"></h2>
+        <h3 id="spécific1">Force</h3>
+        <p id="force1"></p>
+        <h3 id="spécific2">Vitesse</h3>
+        <p id="vitesse1"></p>
+        <h3 id="spécific2">Défense</h3>
+        <p id="defense1"></p>
+        <h3 id="spécific2">Durabilité</h3>
+        <p id="durabilite1"></p>
+        <h3 id="spécific2">Intelligence</h3>
+        <p id="intelligence1"></p>
+      </div>
+    
+      <div id="carte2" class="hidden" style="text-align: right;">
+        <h2 id="name2"></h2>
+        <h3 id="spécific2">Force</h3>
+        <p id="force2"></p>
+        <h3 id="spécific2">Vitesse</h3>
+        <p id="vitesse2"></p>
+        <h3 id="spécific2">Défense</h3>
+        <p id="defense2"></p>
+        <h3 id="spécific2">Durabilité</h3>
+        <p id="durabilite2"></p>
+        <h3 id="spécific2">Intelligence</h3>
+        <p id="intelligence2"></p>
+      </div>
     </div>
   </div>
 </body>
@@ -70,6 +73,6 @@ button.style.display = 'none';
 // Attendez 5 secondes avant d'afficher le bouton
 setTimeout(function() {
     button.style.display = 'block';
-}, 5000); // 5000 millisecondes = 5 secondes
+}, 3000); // 5000 millisecondes = 5 secondes
 </script>
 </html>
